Adds example to ensure typescript, material-ui, and react are building properly
- Implements material design UI "Getting started" example
- The simple example ensures all parts are working together and building properly:
typescript, material UI, react
- material-ui "getting started" docs: https://material-ui.com/getting-started/installation/
- Parcel typescript config docs: https://parceljs.org/typeScript.html
- Using font roboto as recommended in material-ui docs, for now
- Begin using "gm--" (for Gemmy) prefix for namespacing througout app

--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/UseFedora/frontend-takehome-parcel#readme",
   "dependencies": {
+    "@material-ui/core": "^4.0.1",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
-    "parcel": "^1.9.7"
+    "parcel": "^1.9.7",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "typescript": "^3.5.1"
   }
 }
