--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/UseFedora/frontend-takehome-parcel#readme",
   "dependencies": {
     "@material-ui/core": "^4.0.1",
+    "@material-ui/icons": "^4.0.1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "concurrently": "^4.0.1",
@@ -28,6 +29,9 @@
     "parcel": "^1.9.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "src": "^1.1.2",
     "typescript": "^3.5.1"
-  }
+  },
+  "devDependencies": {}
 }
